--- a/TekTrackFrontEnd/TekTrack/assets/styles/navbar.css
+++ b/TekTrackFrontEnd/TekTrack/assets/styles/navbar.css
@@ -88,7 +88,7 @@ ul {
   letter-spacing: 0.5px;
   padding: 10px 15px; /* Added padding for better clickability */
 
-  color: white; /* Changed to white for better visibility */
+  color: black; 
   background: transparent;
   border: none;
   text-decoration: none;
