--- a/TekTrackFrontEnd/TekTrack/assets/styles/logoBanner.css
+++ b/TekTrackFrontEnd/TekTrack/assets/styles/logoBanner.css
@@ -1,24 +1,14 @@
 .logo-banner {
     display: flex;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-    background-color: #000; /* or any color you prefer */
+    height: 100px; /* Adjust height as needed */
+    background-color: rgb(255, 255, 255); /* Background color of the banner */
   }
   
   .logo-image {
-    max-height: 50px; /* Adjust as needed */
-  }
-  
-  .logout-button {
-    background-color: white; /* Adjust color as needed */
-    color: #fff;
-    border: none;
-    padding: 5px 10px;
-    cursor: pointer;
-  }
-  
-  .logout-button:hover {
-    background-color: white; /* Adjust hover color as needed */
+    max-height: 150%; /* Ensure the image does not exceed the height of the banner */
+    max-width: 150%; /* Ensure the image does not exceed the width of the container */
+    margin-bottom: 20px;
   }
   
